2007-02-11  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/4027
	* gas/i386/opcode.s: Add more tests for "test".
	* i386/opcode-intel.d: Updated.
	* gas/i386/opcode-suffix.d: Likewise.
	* gas/i386/opcode.d: Likewise.

2007-02-06  Nick Clifton  <nickc@redhat.com>

	PR gas/3810 gas/3800
	* gas/elf/elf.exp: Expect the redef test to fail on targets which
	do not convert fixups against ordinary symbols into relocs against
	section symbols.
	* gas/all/gas.exp: Likewise.

2007-02-05  Dave Brolley  <brolley@redhat.com>

	* gas/mep/relocs-junk1.s: Add a .data section.
	* gas/mep/relocs.d: Updated to match above.

2007-02-04  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/3961
	* gas/i386/secrel.d: Support 64bit host.

2007-02-02  Nick Clifton  <nickc@redhat.com>

	PR gas/3812
	* gas/v850/v850e1.d: Correct expected disassembly of cmov insn to
	account for sign extension.

2007-01-11  Paul Brook  <paul@codesourcery.com>

	* gas/arm/thumb2_add.d: Add test for missing operand.
	* gas/arm/thumb2_add.s: Ditto.

2007-01-11  Nick Clifton  <nickc@redhat.com>

	* gas/mcore/allinsn.s: Remove use of '#' before numbers - it is a
	line comment character.
	* gas/mcore/allinsn.d: Adjust expected disassembly to match real
	output.

	* gas/lns/lns.exp: Run the alternative version of the lns-common-1
	test for the MCore target.

2007-01-08  Kai Tietz	<kai.tietz@onevision.com>

	* gas/all/gas.exp: Renamed target x86_64-*-mingw64 to x86_64-*-mingw*.
	* gas/i386/i386.exp: Ditto.

2007-01-04  Paul Brook  <paul@codesourcery.com>

	* gas/arm/archv6.s: Add more cpsie tests.
	* gas/arm/archv6.d: Ditto.

2007-01-04  Andreas Schwab  <schwab@suse.de>

	* gas/m68k/cpu32.[sd]: New test.
	* gas/m68k/all.exp: Run it.

2007-01-04  Julian Brown  <julian@codesourcery.com>

	* gas/arm/neon-omit.d: Fix expected encodings for vshl, vqshl.

2007-01-04  Paul Brook  <paul@codesourcery.com>

	* gas/arm/neon-cov.d: Adjust expected output.
	* gas/arm/neon-omit.s: Add tests for vcgt and vcle.  Reorder vacle
	and vacle.