@@ -1,3 +1,12 @@
+2007-02-19  Andreas Krebbel  <krebbel1@de.ibm.com>
+
+	* gas/s390/esa-g5.d (cfxbr, cfebr, cfdbr): Exchanged floating
+	point and fixed point operands.
+	* gas/s390/esa-g5.s: Likewise.
+	* gas/s390/zarch-z900.d (cfdr, cfer, cfxr, cgdbr, cgebr, cgxbr,
+	cgdr, cger, cgxr): Likewise.
+	* gas/s390/zarch-z900.s: Likewise.
+
 2007-02-11  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR gas/4027
